Fixing bug 407812. Don't waste time calling QI in nsNodeSH::PreCreate() and nsElementSH::PostCreate(). r+sr=jonas@sicking.cc