content/html/document/src/nsImageDocument.cpp
@@ -266,13 +266,11 @@ nsImageDocument::~nsImageDocument()
 NS_IMPL_ADDREF_INHERITED(nsImageDocument, nsMediaDocument)
 NS_IMPL_RELEASE_INHERITED(nsImageDocument, nsMediaDocument)
 
-NS_INTERFACE_TABLE_HEAD(nsImageDocument)
-  NS_INTERFACE_TABLE4(nsImageDocument,
-                      nsIImageDocument,
-                      imgIDecoderObserver,
-                      imgIContainerObserver,
-                      nsIDOMEventListener)
-  NS_INTERFACE_TABLE_TO_MAP_SEGUE
+NS_INTERFACE_MAP_BEGIN(nsImageDocument)
+  NS_INTERFACE_MAP_ENTRY(nsIImageDocument)
+  NS_INTERFACE_MAP_ENTRY(imgIDecoderObserver)
+  NS_INTERFACE_MAP_ENTRY(imgIContainerObserver)
+  NS_INTERFACE_MAP_ENTRY(nsIDOMEventListener)
   NS_INTERFACE_MAP_ENTRY_CONTENT_CLASSINFO(ImageDocument)
 NS_INTERFACE_MAP_END_INHERITING(nsMediaDocument)
 
